# Product-Builders

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specs/plans/: cursor-native-enrichment.design.md  ux-improvements.design.md
company_standards/: accessibility.yaml  general.yaml  git-workflow.yaml  performance.yaml  quality.yaml  schema.yaml  security.yaml
docs/: code-review-report.md
docs/plans/: 2026-03-25-operations-dashboard-design.md  2026-03-25-operations-dashboard-plan.md  2026-03-26-analyzer-deep-research.md
docs/presentations/: 01-stakeholder-overview-prompt.md  02-engineering-deepdive-prompt.md
profiles/career-path/: analysis.json  review-checklist.md  scopes.yaml
profiles/career-path/.cursor/rules/: architecture.mdc  bootstrap-meta-rule.mdc  cicd.mdc  coding-conventions.mdc  contributor-guide.mdc  dependencies.mdc  enrich-all.mdc  git-workflow.mdc  performance.mdc  project-overview.mdc  security.mdc  state-and-config.mdc  tech-stack.mdc  user-flows.mdc
profiles/career-path/docs/: onboarding-engineer.md
profiles/product-builders/: analysis.json  scopes.yaml
profiles/product-builders/.cursor/: cli.json  hooks.json
profiles/product-builders/.cursor/rules/: bootstrap-meta-rule.mdc  contributor-guide.mdc  error-handling.mdc  git-workflow.mdc  project-overview.mdc  security.mdc  tech-stack.mdc
profiles/product-builders/docs/: onboarding-engineer.md  onboarding-product_manager.md
profiles/seeker1/: analysis.json
profiles/seeker1/.cursor/rules/: accessibility.mdc  api-patterns.mdc  architecture.mdc  auth-patterns.mdc  bootstrap-meta-rule.mdc  coding-conventions.mdc  contributor-guide.mdc  database.mdc  dependencies.mdc  design-system.mdc  enrich-all.mdc  enrich-architecture.mdc  enrich-critical.mdc  enrich-frontend.mdc  enrich-supporting.mdc  error-handling.mdc  frontend-patterns.mdc  git-workflow.mdc  project-overview.mdc  security.mdc  state-and-config.mdc  testing.mdc  user-flows.mdc
profiles/seeker1/docs/: onboarding-engineer.md
src/product_builders/: __init__.py  __main__.py  cli.py  cli_wizard.py  config.py
src/product_builders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/product_builders/analyzers/: __init__.py  accessibility.py  api.py  auth.py  base.py  cicd.py  conventions.py  database.py  dependencies.py  deps.py  design.py  env_config.py  error_handling.py  frontend_patterns.py  git_workflow.py  i18n.py  performance.py  registry.py  security.py  state_management.py  structure.py  tech_stack.py  testing.py  user_flows.py
src/product_builders/ast/: __init__.py
src/product_builders/deep_analysis/: __init__.py  prompts.py
src/product_builders/generators/: __init__.py  base.py  cursor_hooks.py  cursor_permissions.py  cursor_rules.py  enrichment.py  onboarding.py  registry.py  scopes.py
src/product_builders/generators/templates/: accessibility.mdc.j2  api-patterns.mdc.j2  architecture.mdc.j2  auth-patterns.mdc.j2  bootstrap-meta-rule.mdc.j2  database.mdc.j2  (+16 more)
src/product_builders/lifecycle/: __init__.py
src/product_builders/models/: __init__.py  analysis.py  profile.py  scopes.py
src/product_builders/profiles/: __init__.py  base.py  overrides.py
src/product_builders/webapp/: __init__.py  __main__.py  app.py  job_manager.py  routes_api.py
tests/: test_webapp.py
tests/test_analyzers/: test_accessibility.py  test_api.py  test_auth.py  test_cicd.py  test_conventions.py  test_database.py  test_dependencies.py  test_design.py  test_env_config.py  test_error_handling.py  test_frontend_patterns.py  test_git_workflow.py  test_i18n.py  test_performance.py  test_security.py  test_state_management.py  test_structure.py  test_tech_stack.py  test_testing.py  test_user_flows.py
tests/test_generators/: test_generator_integration.py  test_hooks.py  test_overrides.py  test_scopes.py  test_templates.py
tests/webapp/: test_job_manager.py  test_job_manager_repo_integration.py  test_routes_api.py
(+20 files in other folders)
